--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <hr>
     <p>Las siguientes son <em>citas.</em> De mis favoritas.</p>
     <cite>Lao Tsé</cite>
-    <blockquote>Si das pescado a un hombre hambriento lo nutres durante una jornada. Si le enseñas a pescar, le nutrirás toda su vida</blockquote>
+    <blockquote>"Si das pescado a un hombre hambriento lo nutres durante una jornada. Si le enseñas a pescar, le nutrirás toda su vida"</blockquote>
     <br>
     <cite>Aristóteles</cite>
-    <blockquote>El sabio no dice nunca todo lo que piensa, pero siempre piensa todo lo que dice</blockquote>
+    <blockquote>"El sabio no dice nunca todo lo que piensa, pero siempre piensa todo lo que dice"</blockquote>
     <hr>
     <p>Estas son algunas definiciones de mi carrera <dfn title="La Carrera de INGENIERIA DE SISTEMAS INFORMATICOS, tiene como objetivo preparar Profesionales con conocimientos científicos y una habilidad creadora tal, que le permita identificar problemas y formular soluciones integrales a sistema informáticos en empresas públicas y privadas.">
     Ingenieria en Sistemas Informaticos</dfn> </p>
@@ -43,7 +43,7 @@
     <p>Email: <br>
         <a href="mailto:gr20036@ues.edu.sv">gr20036@ues.edu.sv</a></p>
     <p>
-    E.S mail:
+    E.S mail: <br>
     Departamento de Ingenieria y Arquitectura <br>
     Universidad de El Salvador <br>
     San Miguel <br>
